2010-09-29  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        Crash at lineBreakExistsAtPosition + 125
        <rdar://problem/7028809> 
        https://bugs.webkit.org/show_bug.cgi?id=46770
        
        lineBreakExistsAtPosition is called from InsertTextCommand::input,
        where we compute the downstream position of the endingSelection().
        Downstream can return the original position, that comes from a VisibleSelection
        but there is no guarantee that its renderer is still there. Everywhere we dereference
        a renderer we check if it's null.
        
        There is no regression test.
        
        * editing/htmlediting.cpp:
        (WebCore::lineBreakExistsAtPosition): Added check that the renderer is not null
        before dereferencing it.

2010-09-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Add additional checks to StringBuilder.
        <rdar://problem/7761248>

        * platform/text/StringBuilder.cpp:
        (WebCore::checkAppend):
        (WebCore::StringBuilder::append):
        (WebCore::StringBuilder::toString):
        (WebCore::StringBuilder::clear):
        (WebCore::StringBuilder::length):
        * platform/text/StringBuilder.h:
        (WebCore::StringBuilder::StringBuilder):
        (WebCore::StringBuilder::setNonNull):
        (WebCore::StringBuilder::isNull):

2010-09-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        plugins/npruntime/invoke-failure.html fails in WebKit2 due to slightly different exception being thrown
        https://bugs.webkit.org/show_bug.cgi?id=46715
        <rdar://problem/8485909>

        Remove exclamation points from exceptions.

        * bindings/v8/V8NPObject.cpp:
        (WebCore::npObjectInvokeImpl):
        * bridge/c/c_instance.cpp:
        (JSC::Bindings::CInstance::invokeMethod):
        (JSC::Bindings::CInstance::invokeDefaultMethod):